# fullstack_exemplo

./: .gitignore  .tool-versions  LICENSE  README.md
backend/: pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/: App.js  produtos.js  store.js
frontend/src/components/: Forms.js  GridHome.js
frontend/src/screens/: Home.js
frontend/src/slices/: productSlice.js
