[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Me atualizando sobre os novos recursos do django, django-rest-framework e poetry"
authors = ["Alisson Oliveira Ferreira <alissonof@uol.com.br>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.5"
django-rest-framework = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
